# gearcalc

./: .gitignore  CMakeLists.txt  FileEmbed.cmake  GearCalcListen.c  GearCalcListen.h  README.md  blank.html  blank.py  gearcalc.py
.github/workflows/: build.yml  cmake.yml  release.yml
